<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <!-- Campos de Registro -->
    <EditText
        android:id="@+id/editTextRegisterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/azul"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/gris_claro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/azul"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/gris_claro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterName" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/azul"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gris_claro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterEmail" />

    <!-- Fotos de Perfil -->
    <!-- Avatar 1 -->
    <ImageView
        android:id="@+id/imageViewProfile1"
        android:tag="1"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/avatar_1"
        android:contentDescription="@string/description_avatar_1"
        android:onClick="selectAvatar"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterPassword" />

    <!-- Avatar 2 -->
    <ImageView
        android:id="@+id/imageViewProfile2"
        android:tag="2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/avatar_2"
        android:contentDescription="@string/description_avatar_2"
        android:onClick="selectAvatar"
        android:layout_marginStart="13dp"
        app:layout_constraintStart_toEndOf="@id/imageViewProfile1"
        app:layout_constraintTop_toTopOf="@id/imageViewProfile1" />

    <!-- Avatar 3 -->
    <ImageView
        android:id="@+id/imageViewProfile3"
        android:tag="3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/avatar_4"
        android:contentDescription="@string/description_avatar_4"
        android:onClick="selectAvatar"
        android:layout_marginStart="13dp"
        app:layout_constraintStart_toEndOf="@id/imageViewProfile2"
        app:layout_constraintTop_toTopOf="@id/imageViewProfile2" />

    <!-- Avatar 4 -->
    <ImageView
        android:id="@+id/imageViewProfile4"
        android:tag="4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/avatar_3"
        android:contentDescription="@string/description_avatar_3"
        android:onClick="selectAvatar"
        android:layout_marginStart="13dp"
        app:layout_constraintStart_toEndOf="@id/imageViewProfile3"
        app:layout_constraintTop_toTopOf="@id/imageViewProfile3" />

    <!-- Botón de Registro, posicionado debajo de las imágenes de perfil -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/azul"
        android:text="@string/register"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfile1" />

</androidx.constraintlayout.widget.ConstraintLayout>
